# XJTU-RMV-Task02

./: CMakeLists.txt  CMakePresets.json  README.md  tree.txt
src/: main.cpp  task2.cpp
